dark mode fix

--- a/jrny-app/src/styles.css
+++ b/jrny-app/src/styles.css
@@ -13,7 +13,7 @@ body, html {
     padding: 0;
   }
   
-  .inverted-colors {
+  .inverted-colors body {
     background-color: rgb(30, 30, 30);
     color: white;
   }
